syntax = "proto3";

option csharp_namespace = "EnvironmentalVariablesDAQ.GrpcProtos";

package GrpcProtos;

message GetRequest{
	string id = 1;
}

message DeleteRequest{
	string id = 1;
}

message VariableType{
	string name = 1;
	string measurementUnit = 2;
}

//Temporal
message BuildingDTO{
	string id = 1;
	string address=2;
	int32 number=3;
}
//Temporal
message FloorDTO{
	string id = 1;
	string location = 2;
	BuildingDTO building = 3;
	string buildingId = 4;
}
//Temporal
message RoomDTO{
	string id = 1;
	int32 number = 2;
	bool isProduction=3;
	string description = 4;
	FloorDTO floor = 5;
	string floorId = 6;
}